add link to post

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -28,7 +28,7 @@ input, textarea, button, select, a
 body
   background-color: white
 
-  a
+a
   text-decoration: none
   color: black
 
@@ -58,6 +58,7 @@ body
     height: 12%
     border-radius: 1.5vw
     margin-bottom: 15px
+    padding: 1vw 0
     
     #userpic
       margin: 0 2vw 0 3vw
@@ -66,7 +67,7 @@ body
       border-radius: 2.5vw
       background-color: rgba(196, 196, 196, 1)
     #insertbox
-      height: 4vh
+      height: 6vh
       width: calc(100% - 13vw)
       border-radius: 1.2vw
       background-color: rgba(247, 247, 247, 1)
@@ -136,6 +137,8 @@ body
         
         *
           margin: 0
+        p
+          margin-bottom: 0.6vw
         
         #posttop
           transform: translate(-1.55vw, -1.1vw)
