--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -37,16 +37,18 @@
   /*UpLeft/UR/DR/DL
   z-index: 1
 
-#title
-  font-family: var(--font-family-header)
-  font-style: var(--font-style-header)
-  font-weight: 100
-  font-size: 2.7vw
-
-  /*top: 0px;
-  line-height: 3.5vw
-  color: var(--fontcolor_header)
+a
   margin-left: 3%
+  #title
+    font-family: var(--font-family-header)
+    font-style: var(--font-style-header)
+    font-weight: 100
+    font-size: 2.7vw
+
+    /*top: 0px;
+    line-height: 3.5vw
+    color: var(--fontcolor_header)
+    margin-left: 3%
 
 /*button
 #navbar
