--- a/templates/event_detail.pug
+++ b/templates/event_detail.pug
@@ -1,85 +1,58 @@
 {% load static %}
-doctype html
-html
-  head
-    meta(charset="utf-8")
-    meta(content="width=device-width, initial-scale=1", name="viewport")
-    title CONNECT - {{ event_obj.title }}
-    link(href="{% static 'file/logo.ico' %}",rel="icon")
-    {% load sass_tags %}
-    link(href="{% sass_src 'sass/homepage.sass' %}",rel="stylesheet",type="text/css")
-    link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
+{% if event_detail.host %}
+#eventwindow
+  #description
+    h1 {{ event_detail.title }}
+    #subtitle {{ event_detail.subtitle }}
+    #detail {{ event_detail.detail }}
 
-  {% include 'navbar.pug' %}
-
-  body
-    #eventwindow
-      #description
-        h1 {{ event_obj.title }}
-        //- pug多行註解：//之後要註解的都縮排
-        //
-          #keywords
-            #kw1 costco
-            p ,
-            #kw2 有會員卡
-            p ,
-            #kw3 缺司機
-        #subtitle {{ event_obj.subtitle }}
-        #detail {{ event_obj.detail }}
-
-      #member
-        a(href="{% url 'profile' id=event_obj.host.pk %}")
-          img#organizer.member(src='{{ event_obj.host.img.url }}')
-        #bar
-        {% for participant in event_obj.participants.all %}
-        a(href="{% url 'profile' id=participant.pk %}")
-          img.member.participant(src='{{ participant.img.url }}')
-        {% empty %}
-        {% if event_obj.number_of_likes == 0 %}
-        p 還沒有參與者
-        {% endif %}
-        {% endfor %}
-        {% for interested_user in event_obj.likes.all %}
-        a(href="{% url 'profile' id=interested_user.pk %}")
-          img.member.interested(src='{{ interested_user.img.url }}')
-        {% endfor %}
-      
-      #operatebg
-      
-      #eventoperate
-              
-        img#exitbtn1(src="{% static 'file/exiticon.png' %}")
-        #flag
-          img#flag-y(src="{% static 'file/flag-y.png' %}")
-          img#flag-n(src="{% static 'file/flag-n.png' %}")
-        
-          
-        #date 2021/5/2
-        a(href="{% url 'profile' id=event_obj.host.pk %}")
-          img#organizerpic(src='{{ event_obj.host.img.url }}')
-          p {{ event_obj.host.full_name }}
-
-          
-        #likebutton
-          form(action="{% url 'like' event_obj.pk %}", method="POST")
-            {% csrf_token %}
-            button(type="image", src="{% static 'file/like-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_obj.id }}")
-              span#like-img
-          //
-            img#like-y(src="{% static 'file/like-y.png' %}")
-            img#like-n(src="{% static 'file/like-n.png' %}")
-
-        #applybutton
-          img#apply-y(src="{% static 'file/applyicon.png' %}")
-
-      #sent
-        {% load static %}
-        img#mailicon(src="{% static 'file/lettericon.png' %}")
-        p 已向發起者送出邀請
+  #member
+    a(href="{% url 'profile' id=event_detail.host.pk %}")
+      img#organizer.member(src='{{ event_detail.host.img.url }}')
+    #bar
+    {% for participant in event_detail.participants.all %}
+    a(href="{% url 'profile' id=participant.pk %}")
+      img.member.participant(src='{{ participant.img.url }}')
+    {% empty %}
+    {% if event_detail.number_of_likes == 0 %}
+    p 還沒有參與者
+    {% endif %}
+    {% endfor %}
+    {% for interested_user in event_detail.likes.all %}
+    a(href="{% url 'profile' id=interested_user.pk %}")
+      img.member.interested(src='{{ interested_user.img.url }}')
+    {% endfor %}
+  
+  #operatebg
+  
+  #eventoperate
+    a(href="{% url 'home' %}")   
+      img#exitbtn1(src="{% static 'file/exiticon.png' %}")
+    #flag
+      img#flag-y(src="{% static 'file/flag-y.png' %}")
+      img#flag-n(src="{% static 'file/flag-n.png' %}")
     
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
-    script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
-    script(src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js")
-    //- script(src="https://apps.bdimg.com/libs/jquery/1.10.2/jquery.min.js")
-    //- script(src="https://apps.bdimg.com/libs/jquerymobile/1.4.5/jquery.mobile-1.4.5.min.js")
-    script(src="{% static 'js/homepage.js' %}")
+      
+    #date 2021/5/2
+    a(href="{% url 'profile' id=event_detail.host.pk %}")
+      img#organizerpic(src='{{ event_detail.host.img.url }}')
+      p {{ event_detail.host.full_name }}
+
+      
+    #likebutton
+      form(action="{% url 'like' event_detail.pk %}", method="POST")
+        {% csrf_token %}
+        button(type="image", src="{% static 'file/like-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
+          span#like-img
+      //
+        img#like-y(src="{% static 'file/like-y.png' %}")
+        img#like-n(src="{% static 'file/like-n.png' %}")
+
+    #applybutton
+      img#apply-y(src="{% static 'file/applyicon.png' %}")
+
+  #sent
+    {% load static %}
+    img#mailicon(src="{% static 'file/lettericon.png' %}")
+    p 已向發起者送出邀請
+{% endif %}
