--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -66,6 +66,9 @@ a
       height: 5vw
       border-radius: 2.5vw
       background-color: rgba(196, 196, 196, 1)
+    #inserta
+      width: calc(100% - 13vw)
+
     #insertbox
       height: 6vh
       width: calc(100% - 13vw)
