--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -39,6 +39,7 @@
 
 a
   margin-left: 3%
+  text-decoration: none
   #title
     font-family: var(--font-family-header)
     font-style: var(--font-style-header)
