--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -15,8 +15,16 @@ html
   body
     #container
       #create
+        {% if request.user.is_authenticated %}
         img#userpic(src="{{ request.user.userextend.img.url }}")
         button#insertbox
+        {% else %}
+        a(href="{% url 'login' %}")
+          #userpic
+        a#inserta(href="{% url 'login' %}")
+          button#insertbox
+        {% endif %}
+        
 
       #board
         #divider
