--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -132,38 +132,49 @@ a
         justify-content: flex-start
         align-items: flex-start
                 
-        width: 13vw
+        width: 14vw
         background-color: white
-        margin: 0.5vw 0
+        margin: 0.7vw 0
         padding: 1vw 1.5vw 0.5vw 1.5vw
         border-radius: 1.5vw
         
         *
           margin: 0
         p
-          margin-bottom: 0.6vw
+          //margin-bottom: 0.3vw
         
         #posttop
           transform: translate(-1.55vw, -1.1vw)
-          width: 13.1vw
-          padding: 1vw 1.5vw 0.5vw 1.5vw
+          width: 14.1vw
+          padding: 1vw 1.5vw 0.3vw 1.5vw
           border-radius: 1.5vw
-          min-height: 7vw
           background-color: #FFAD94
+          min-height: 5.5vw
           
           #postimgs
-            height: 3vw
-            width: 3vw
+            height: 2.5vw
+            width: 2.5vw
             border-radius: 0.5vw
             border: solid 1px
-            border-color: #828282
+            border-color: #999999
             background-color: #FFDBD0
             
           #post_title
-            font-size: 1.5vw
+            font-size: 1.4vw
             font-weight: 600
+            width: 13.5vw
+            overflow: hidden
+            white-space: nowrap
+            text-overflow: ellipsis
+            margin-bottom: 0.3vw
           #post_subtitle
-            font-size: 1vw
+            font-size: 0.85vw
+            width: 13.5vw
+            overflow: hidden
+            white-space: nowrap
+            text-overflow: ellipsis
+            font-weight: 100
+            margin-bottom: 0.3vw
           #postcreatdate
             font-size: 0.8vw
             color: #777777
@@ -194,7 +205,11 @@ a
           #commenticon
             height: 1.5vw
             width: auto
-          
+      #virtualdiv
+        *
+          background: none
+      a
+        margin-left: 0
           
       
 #gotop 
@@ -470,19 +485,21 @@ a
   #profile
     display: flex
     margin: 1vw 0
-    height: 4vw
     margin: 0 0 1vw 0
         
     #user-img
-      height: 4vw
-      width: 4vw
-      border-radius: 2vw
-      background-color: red
+      height: 5vw
+      width: 5vw
+      border-radius: 2.5vw
+      border: solid 2px
+      border-color: #CCCCCC
+      //#3AEDC2
+      background-color:
       
     h1
       align-items: center
       font-size: 2.5vw
-      line-height: 4vw
+      line-height: 5vw
       //transform: translate(0, -50%)
       margin-left: 1vw
   
@@ -490,7 +507,7 @@ a
     display: flex
     flex-direction: column
     align-items: stetch
-    padding: 0 3vw 3vw 3vw
+    padding: 0 2vw 2vw 2vw
     //padding-left: 3vw
     //padding-right: 3vw
     //padding-bottom: 3vw
@@ -516,7 +533,7 @@ a
     textarea
       border-radius: 1vw
       background-color: #EEEEEE
-      border-radius: 2.5vw
+      border-radius: 2.2vw
       margin-bottom: 0.7vw
       padding: 1vw 1vw
       outline: none
@@ -537,62 +554,8 @@ a
       
     #id_image
       color: #666666
-    
-    
-    // p:nth-child(3)
-    //   background-color: red
-    //   input:nth-child(2)
-    //     background-color: yellow
-          
-    //   input:nth-child(1)
-        
-      
-    // p:nth-child(4)
-    //   background-color: blue
-      
-    // p:nth-child(5)
-    //   background-color: green
-      
-    // p:nth-child(6)
-    //   background-color: red
-      
-    // p:nth-child(7)
-    //   background-color: blue
-      
-    // p:nth-child(8)
-    //   background-color: green
-    
-  
-  
-  ul
-    display: flex
-    //justify-content: space-around
-    align-items: center
-    white-space: nowrasp
-    list-style-type: none
-    margin-top: 0.5vw
-    margin-left: 4vw
-    width: 90%
-
-  li
-    display: block
-    float: left
-    white-space: nowrap
-    word-break: normal
-    word-wrap: nowrap
-    align-items: center
-    text-align: center
-    line-height: 1.5vw
-    
-    font-size: 1vw
-    font-family: var(--font-family-text)
-    font-style: var(--font-style-text)
-    margin-right: 1vw
-    padding: 0.2vw 0.5vw
-    
-    background-color: #3AEDC2
-    height: 1.5vw
-    border-radius: 1vw
+      font-size: 1vw
+      margin-left: 1vw
     
       
   .input-area
@@ -603,28 +566,26 @@ a
     padding: 0.7vw 0 0 1vw
     outline: none
   
-  #eventtitle
-    font-size: 2vw
-    height: 2.5vw
-    
-  #eventsubtitle
-    font-size: 1.7vw
-    height: 2.3vw
-  
-  #eventdescription
-    font-size: 1vw
-    height: 7vw
       
   #buttons
     position: absolute
-    height: 5vw
-    width: 5vw
-    right: 3.2vw
+    transform: translate(-50%, 0)
+    //height: 5vw
+    //width: 5vw
+    left: 50%
+    
     bottom: 2vw
     #submit-btn
-      width: 100%
+      //width: 100%
       background: none
       height: auto
+      font-size: 2vw
+      background-color: #32DEB5
+      border-radius: 2vw
+      padding: 0.5vw 1vw
+      margin-top: 2vw
+    #submit-btn:hover
+      background-color: #9FE4D4
 
 #filter1
   display: none
