--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -61,7 +61,7 @@ html
               
         #eventboard
           {% for event in event_obj %}
-          a(href="{% url 'event_detail' id=event.pk %}")
+          a(href="{% url 'event_detail' id=event.pk %}" margin='0')
             #eventpost
               #posttop
                 p#post_title {{ event.title }}
@@ -69,7 +69,7 @@ html
                 {% if event.image %}
                 img#postimgs(src="{{ event.image.url }}")
                 {% else %}
-                #postimgs
+                //#postimgs
                 {% endif %}
                 #add_pic
                   #addpic_bg
@@ -80,7 +80,7 @@ html
                   #tags
                 
                 #postcreatdate
-                  p {{ event.create_date }}
+                  //p {{ event.create_date }}
                   
                 #postwanted
                   //p {{ event.people_wanted }}
@@ -97,6 +97,12 @@ html
           #eventpost
             p no event
           {% endfor %}
+          
+          //如果event個數 % 3 = 2，建立一個虛擬div
+          #virtualdiv
+            #eventpost
+            
+                
         
         
 
@@ -118,8 +124,9 @@ html
         {{ form.as_table }}
 
         #buttons
-          input#submit-btn(type="image" src="{% static 'file/submitbtn.png' %}" alt="Submit Form")
-
+          //input#submit-btn(type="image" src="{% static 'file/submitbtn.png' %}" alt="Submit Form")
+          p#submit-btn 發佈
+          
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js")
