modify homepage post

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -569,21 +569,21 @@ a
       
   #buttons
     position: absolute
-    transform: translate(-50%, 0)
-    //height: 5vw
-    //width: 5vw
-    left: 50%
-    
+    //transform: translate(-50%, 0)
+    height: 5vw
+    width: 5vw
+    //left: 50%
+    right: 3.2vw
     bottom: 2vw
     #submit-btn
-      //width: 100%
+      width: 100%
       background: none
       height: auto
       font-size: 2vw
-      background-color: #32DEB5
+      //background-color: #32DEB5
       border-radius: 2vw
       padding: 0.5vw 1vw
-      margin-top: 2vw
+      //margin-top: 2vw
     #submit-btn:hover
       background-color: #9FE4D4
 
