--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -325,30 +325,34 @@ a
         align-items: flex-start
         width: 20vw
         //background-color: yellow
+        
         .info
           display: flex
           flex-direction: row
           flex-wrap: nowrap
           justify-content: flex-start
           align-items: center
-          .cardinfott
-            font-size: 1.6vw
-            max-width: 15vw
+          width: 20vw
+          a
+            .cardinfott
+              font-size: 1.5vw
+              width: 12vw
+              //max-width: 15vw
           .rate
-            font-size: 1vw
-            line-height: 1.5vw
-            margin-left: 1.5vw
+            font-size: 0.8vw
+            line-height: 1.2vw
+            margin-left: 0.5vw
             //background-color: #75E1C7
-            padding: 0 0.5vw
+            padding: 0 0.3vw
             border-radius: 1vw
             border: solid 2px
             border-color: #75E1C7
           .charname
-            font-size: 1vw
-            line-height: 1.5vw
+            font-size: 0.8vw
+            line-height: 1.2vw
             margin-left: 0.5vw
             background-color: #75E1C7
-            padding: 0.2vw 0.5vw
+            padding: 0.2vw 0.3vw
             border-radius: 1vw
           
         .comments
@@ -374,16 +378,19 @@ a
               border-radius: 50%
             .comment-right
               background-color: #EFFFFB
-              padding: 0.2vw 0.5vw 0.2vw 0.5vw
+              padding: 0 0.5vw 0.2vw 0.5vw
               border-radius: 1vw
               margin-top: 0.5vw
               width: 15.5vw
               margin-left: 0.5vw
               //background-color: white
               
-              #participant-name
+              //#participant-name
+              a
+                //position: absolute
                 font-size: 1vw
                 text-align: left
+                margin-left: 0
               #participant-comment
                 //background-color: blue
                 font-size: 1vw
