--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -136,7 +136,7 @@ body
   -ms-transform: translate(-50%, -50%)
   transform: translate(-50%, -50%)
   margin-top: 3%
-  width: 22vw
+  width: 25vw
 
 #sign-up-panel
   background-color: #FFCFBF
@@ -173,6 +173,12 @@ body
     border: 0
     margin: 0.5vw 0.5vw 0
   
+  #err-msg
+    font-size: 1.2vw
+    text-align: center
+    color: #FF7575
+    margin-top: 0.5vw
+        
   #term-div
     display: flex
     flex-direction: row
