make user unable to access like or apply if they are not log in

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -253,6 +253,9 @@ a
   *
     font-color: #000000
   
+  p
+    font-size: 1vw
+  
   #description
     position: absolute
     left: 3.5vw
@@ -389,6 +392,11 @@ a
         color: black
         width: 5vw
     
+    a#login-redirect
+      width: 6vw
+      height: 3vw
+      transform: translate(-50%, -50%)
+      top: 95%
     #likebutton
       left: 1vw
       bottom: 1vw
@@ -432,7 +440,6 @@ a
     bottom: -6px
     width: auto
     height: auto
-    overflow: scroll
     border-radius: 5vw
     opacity: 0
     z-index: -1
