--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -51,7 +51,7 @@ a
   #create
     display: flex
     flex-direction: row
-    justify-content: flex-start
+    justify-content: space-around
     align-items: center
     background-color: rgba(255, 219, 208, 1)
     width: 100%
@@ -61,17 +61,19 @@ a
     padding: 1vw 0
     
     #userpic
-      margin: 0 2vw 0 3vw
+      margin-left: 2%
+      margin-right: 2%
       width: 5vw
       height: 5vw
       border-radius: 2.5vw
       background-color: rgba(196, 196, 196, 1)
     #inserta
-      width: calc(100% - 13vw)
+      width: calc(100% - 6vw)
 
     #insertbox
+      margin-right: 4%
       height: 6vh
-      width: calc(100% - 13vw)
+      width: calc(100% - 6vw)
       border-radius: 1.2vw
       background-color: rgba(247, 247, 247, 1)
       cursor: pointer
