--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -78,6 +78,10 @@ a
       background-color: rgba(247, 247, 247, 1)
       cursor: pointer
       border: none
+      text-align: left
+      padding-left: 1.5vw
+      font-size: 1.5vw
+      color: #666666
       
   
 
@@ -200,7 +204,7 @@ a
           p
             line-height: 1.5vw
             font-size: 1vw
-            
+          
           #likeicon
             height: 1.5vw
             width: auto
@@ -301,6 +305,12 @@ a
     *
       position: relative
       margin: 0 0.5vw 0 0
+    
+    p
+      font-size: 1vw
+      vertical-align: middle
+      margin: 0
+      padding: 1vw 0
       
     #bar
       width: 5px
@@ -404,11 +414,17 @@ a
       bottom: 1vw
       height: 3vw
       width: 3vw
+      background-image: url('../file/like-n.png')
+      background-repeat: no-repeat
+      background-size: contain
       form
         button
-          background: url('../file/like-n.png')
-          width: 20px
-          height: 20px
+          background: Transparent
+          border: none
+          width: 3vw
+          height: 3vw
+        button:hover
+          cursor: pointer
     
       #like-y
         display: none
@@ -431,6 +447,8 @@ a
       #apply-n
         display: none
         width: 100%
+    #applybutton:hover
+      cursor: pointer
 
   #sent
     position: absolute
@@ -485,8 +503,8 @@ a
   #exitbtn2
     position: absolute
     transform: translate(-50%, 0)
-    top: 3vw
-    right: 2vw
+    top: 1.5vw
+    right: 1vw
     width: 1.5vw
     height: auto
     
@@ -529,6 +547,7 @@ a
       display: none
     li
       display: none
+    
     input[type=text]
       border-radius: 2.5vw
       margin-bottom: 0.7vw
@@ -540,16 +559,48 @@ a
       background-color: #EEEEEE
     input[type=text]:focus
       border: 2px solid #B9B9B9
+    input[type=date]
+      border-radius: 2.5vw
+      margin-bottom: 0.7vw
+      height: 2vw
+      width: 10vw
+      font-size: 1vw
+      padding: 0 1vw
+      outline: none
+      border: none
+      background-color: #EEEEEE
+      color: #666666
+      padding-left: 1.8vw
+    input[type=date]:focus
+      border: 2px solid #B9B9B9
+    input[type=number]
+      border-radius: 2.5vw
+      margin-bottom: 0.7vw
+      height: 2vw
+      width: 10vw
+      font-size: 1vw
+      padding: 0 1vw
+      outline: none
+      border: none
+      background-color: #EEEEEE
+      color: #666666
+      padding-left: 1.8vw
+      position: relative
+      transform: translate(calc(100% + 0.7vw), -2.7vw)
+    input[type=number]:focus
+      border: 2px solid #B9B9B9
     textarea
       border-radius: 1vw
       background-color: #EEEEEE
-      border-radius: 2.2vw
+      border-radius: 1vw
       margin-bottom: 0.7vw
       padding: 1vw 1vw
       outline: none
       border: none
       font-size: 1vw
       height: 8vw
+      position: relative
+      transform: translateY(-2.7vw)
     
     select
       background-color: #EEEEEE
@@ -561,12 +612,18 @@ a
       border: none
       margin-bottom: 1vw
       padding: 0 1vw
-      
+      position: relative
+      transform: translateY(-2.7vw)
+    
+    #id_title
+      height: 2.5vw
+
     #id_image
       color: #666666
       font-size: 1vw
       margin-left: 1vw
-    
+      position: relative
+      transform: translateY(-2.7vw)
       
   .input-area
     width: 70%
