--- a/templates/event_detail.pug
+++ b/templates/event_detail.pug
@@ -14,10 +14,6 @@
     {% for participant in event_detail.participants.all %}
     a(href="{% url 'profile' id=participant.pk %}")
       img.member.participant(src='{{ participant.img.url }}')
-    {% empty %}
-    {% if event_detail.number_of_likes == 0 %}
-    p 還沒有參與者
-    {% endif %}
     {% endfor %}
 
     {% for interested_user in event_detail.likes.all %}
@@ -35,21 +31,26 @@
       img#flag-n(src="{% static 'file/flag-n.png' %}")
     
       
-    #date {{ event_detail.create_date }}
+    #date {{ event_detail.event_date }}
     a(href="{% url 'profile' id=event_detail.host.pk %}")
       img#organizerpic(src='{{ event_detail.host.img.url }}')
       p {{ event_detail.host.full_name }}
 
-    {% if request.user.is_authenticated %}  
-    #likebutton
+    {% if request.user.is_authenticated %}
+
+    {% if event_detail in request.user.userextend.event_like.all %}
+    #likebutton(style="background-image: url('/static/file/like-y.png')")
       form(action="{% url 'like' event_detail.pk %}", method="POST")
         {% csrf_token %}
         button(type="image", src="{% static 'file/like-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
           span#like-img
-
-      //
-        img#like-y(src="{% static 'file/like-y.png' %}")
-        img#like-n(src="{% static 'file/like-n.png' %}")
+    {% else %}
+    #likebutton(style="background-image: url('/static/file/like-n.png')")
+      form(action="{% url 'like' event_detail.pk %}", method="POST")
+        {% csrf_token %}
+        button(type="image", src="{% static 'file/like-n.png' %}", alt="Submit Form",name="event_id", value="{{ event_detail.id }}")
+          span#like-img
+    {% endif %}
 
     #applybutton
       img#apply-y(src="{% static 'file/applyicon.png' %}")
