--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -1,18 +1,8 @@
 @font-face
   font-family: jf-openhuninn
   src: url('../fonts/jf-openhuninn-1.1.woff') format("woff")
-  font-display: auto
 
-@font-face
-  font-family: GlowSansTC-Extended-Regular
-  src: url('../fonts/GlowSansTC-Extended-Regular.otf') format("opentype")
   font-display: auto
-
-@font-face
-  font-family: GlowSansTC-Normal-Regular
-  src: url('../fonts/GlowSansTC-Normal-Regular.otf') format("opentype")
-  font-display: auto
-
 
 
 \:root
@@ -22,13 +12,14 @@
   --fontcolor-header: #000000
   --fontcolor-text: #000000
   --color-main: #FAAD95
-  --font-family-extended: "GlowSansTC-Extended-Regular", "jf-openhuninn", "Tahoma", "Arial"
-  --font-style-extended: normal
-  --font-family-normal: "GlowSansTC-Normal-Regular", "Noto-Sans CJK TC", "jf-openhuninn", "Tahoma", "Arial"
-  --font-style-extended: normal
+  --font-family-header: "jf-openhuninn", "Tahoma", "Arial"
+  --font-style-header: normal
+  --font-family-text: "jf-openhuninn", "Tahoma", "Arial"
+  --font-style-text: normal
+  --font-family-card: "jf-openhuninn", "Tahoma", "Arial"
 
 *
-  font-family: var(--font-family-normal)
+  font-family: var(--font-family-text)
   padding: 0
   margin: 0
   
