--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -52,7 +52,7 @@ a
   #create
     display: flex
     flex-direction: row
-    justify-content: space-around
+    justify-content: space-evenly
     align-items: center
     background-color: rgba(255, 219, 208, 1)
     width: 100%
@@ -70,12 +70,15 @@ a
       background-color: rgba(196, 196, 196, 1)
 
     #inserta
-      width: 50vw
+      position: absolute
+      transform: translate(3vw, 0)
+      width: 48vw
+      height: 3.5vw
 
     #insertbox
       margin-right: 4%
       height: 3.5vw
-      width: calc(100% - 6vw)
+      width: 48vw
       border-radius: 1.2vw
       background-color: rgba(247, 247, 247, 1)
       cursor: pointer
@@ -118,9 +121,20 @@ a
         //margin: 0 1vw
         border: none
       #line1
-        width: 60%
+        width: 50%
       #line2
-        width: 5%
+        width: 10%
+        
+      #category
+        width: 6.2vw
+      #sort
+        width: 10.8vw
+      select
+        font-size: 1.5vw
+        
+        border-radius: 1vw
+        padding: 0.2vw 0.3vw
+        outline: none
         
     #eventboard
       display: flex
