--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -332,7 +332,7 @@ a
       width: 5px
       height: 3vw
       transform: translate(0, -50%)
-      top: 50%
+      top: 55%
       background-color: #B0B0B0
       
     .member
@@ -358,8 +358,8 @@ a
   
   #exitbtn1
     transform: translate(-50%, 0)
-    top: 3vw
-    right: -10%
+    top: 2vw
+    right: -5vw
     width: 1.5vw
     height: auto
   
@@ -425,6 +425,8 @@ a
       height: 3vw
       transform: translate(-50%, -50%)
       top: 95%
+      display: flex
+      flex-direction: row
     #likebutton
       left: 1vw
       bottom: 1vw
