--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -102,7 +102,7 @@ a
         #description-background
           background-color: white
           //border: solid 2px
-          border-radius: 2vw
+          border-radius: 1.3vw
           //border-color: #3AEDC2
           padding: 2vw 1vw
           width: auto
@@ -177,10 +177,14 @@ a
     padding: 1.5vw 1vw
     border: solid 2px
     border-color: #FFCFBF
-    
-    p
-      font-size: 2vw
-      padding: 0.2vw
+
+    #title-count
+      display: flex
+      flex-direction: row
+      margin-bottom: 0.7vw
+      p
+        font-size: 1.5vw
+        padding: 0.2vw
       
     
     .left-region
@@ -223,9 +227,13 @@ a
       display: flex
       
       .friend-img
-        width: 2vw
-        height: 2vw
+        width: 3.2vw
+        height: 3.2vw
         border-radius: 50%
+        margin-right: 0.4vw
+        margin-left: 0.4vw
+        margin-bottom: 0.5vw
+        border: grey solid 0.05vw
     
   #right-pane
     background-color: #FFE4DC
