--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -629,6 +629,7 @@ a
       border: none
       font-size: 1vw
       height: 8vw
+      width: 100%
     
     select
       background-color: #EEEEEE
