--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -339,7 +339,7 @@ a
           flex-direction: row
           flex-wrap: nowrap
           justify-content: flex-start
-          align-items: center
+          align-items: flex-start
           width: 20vw
           a
             .cardinfott
