--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -70,7 +70,7 @@ html
               #postbottom
                 {% load static %}
                 img#commenticon(src="{% static 'file/participant.png' %}")
-                p#commentnum {{ event.number_of_comments }}
+                p#commentnum {{ event.number_of_participants }}
               
                 {% load static %}
                 img#likeicon(src="{% static 'file/like-y.png' %}")
