lots of modification

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -294,14 +294,15 @@ a
     height: 65%
     width: 60%
     
-    h1
-      font-size: 3vw
+    p
+      font-size: 2.5vw
       color: #000000
+      font-weight: 600
     
     #subtitle
       margin: 0.5vw 0 0 0
       font-size: 1.3vw
-      color: purple
+      color: rgba(61, 201, 167, 1)
     
     #keywords
       display: flex
@@ -312,10 +313,14 @@ a
         color: purple
         
     #detail
-      font-size: 1.5vw
+      font-size: 1vw
       color: #000000
       margin: 0.5vw 0 0 0
       line-height: 1.7vw
+      height: 60%
+      overflow: scroll
+      overflow-x: hidden
+
 
   #member
     position: absolute
