--- a/templates/event_detail.pug
+++ b/templates/event_detail.pug
@@ -3,7 +3,7 @@
 
 #eventwindow
   #description
-    h1 {{ event_detail.title }}
+    p {{ event_detail.title }}
     #subtitle {{ event_detail.subtitle }}
     #detail {{ event_detail.detail }}
 
