add card shadow, modify profile font size /w vw

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -178,6 +178,9 @@ a
     border: solid 2px
     border-color: #FFCFBF
 
+    p
+      font-size: 1.2vw
+
     #title-count
       display: flex
       flex-direction: row
