--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -159,6 +159,7 @@ a
         margin: 0.7vw 0
         padding: 1vw 1.5vw 0.5vw 1.5vw
         border-radius: 1.5vw
+        box-shadow: 5px 10px 20px 0px
         
         *
           margin: 0
