--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -121,7 +121,6 @@ a
           flex-direction: row
           flex-wrap: wrap
           p
-            
             font-size: 0.9vw
             margin: 0 0.5vw
             padding: 0.3vw
@@ -130,10 +129,14 @@ a
             background-color: #FFCFBF
             border-radius: 1vw
             margin-right: 0.5vw
+          .tag-style:hover
+            background-color: #FFAD94
         
         .tag-field:nth-child(4)
           .tag-style
-            background-color: #75E1C7
+            background-color: #9FE4D4
+          .tag-style:hover
+            background-color: #32DEB5
         
         #buttons
           *
