--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -430,6 +430,268 @@ a
       border-radius: 1vw
       width: 18vw
       margin-left: 0.5vw
+
+#eventwindow
+  //display: none
+  position: fixed
+  transform: translate(-50%, -50%)
+  top: 55%
+  left: 50%
+  width: 45%
+  padding-top: 30%
+  background-color: #F5FBFE
+  border-radius: 3vw
+  border: 5px solid rgba(58, 237, 194, 0.5)
+  box-shadow: 10px 10px 25px 5px #00000026
+  z-index: 7
+  
+  *
+    font-color: #000000
+  
+  p
+    font-size: 1vw
+  
+  #description
+    position: absolute
+    left: 3.5vw
+    top: 3.5vw
+    height: 65%
+    width: 60%
+    
+    p
+      font-size: 2.5vw
+      color: #000000
+      font-weight: 600
+    
+    #subtitle
+      margin: 0.7vw 0 0 0
+      font-size: 1.3vw
+      color: rgba(61, 201, 167, 1)
+    
+    #keywords
+      display: flex
+      flex-direction: row
+      margin: 1vw 0 0 0
+      *
+        font-size: 1.5vw
+        color: purple
+        
+    #detail
+      font-size: 1.3vw
+      color: #000000
+      margin: 1vw 0 0 0
+      line-height: 1.7vw
+      height: 60%
+      overflow: scroll
+      overflow-x: hidden
+
+
+  #member
+    position: absolute
+    transform: translate(0, -100%)
+    display: flex
+    flex-direction: row
+    align-itemS: center
+    bottom: -1vw
+    width: 70%
+    height: 3vw
+    left: 3.3vw
+    
+    *
+      //position: relative
+      margin: 0 0.7vw 0 0
+    
+    a
+      margin: 0
+    p
+      font-size: 1vw
+      vertical-align: middle
+      margin: 0
+      padding: 1vw 0
+      
+    #bar
+      width: 0.2vw
+      height: 3vw
+      //transform: translate(0, -50%)
+      //top: 55%
+      background-color: #B0B0B0
+      
+    .member
+      height: 3vw
+      width: 3vw
+      border-radius: 50%
+      background-color: #E0E0E0
+    .participant
+      border: var(--color-main) solid 0.2vw
+
+    #organizer
+      border: #75E1C7 solid 0.2vw
+
+      
+  #operatebg
+    background-color: rgba(58, 237, 194, 0.5)
+    position: absolute
+    right: -2px
+    bottom: -2px
+    width: 32%
+    height: 20%
+    border-radius: 5vw 0 3vw 0
+  
+  #exitbtn1
+    transform: translate(-50%, 0)
+    top: 2vw
+    right: -5vw
+    width: 1.5vw
+    height: auto
+  
+  #eventoperate
+    position: absolute
+    transform: translate(0, -50%)
+    height: 100%
+    width: 20%
+    top: 50%
+    right: 3vw
+    *
+      position: absolute
+
+    #flag
+      display: none
+      transform: translate(-50%, 0)
+      top: 0
+      left: 50%
+      width: 3vw
+      height: auto
+      #flag-y
+        display: none
+        width: 100%
+        height: auto
+        box-shadow: 10px 10px 25px 5px #00000026
+        
+      #flag-n
+        display: block
+        width: 100%
+        height: auto
+        box-shadow: 10px 10px 25px 5px #00000026
+      
+    #date
+      transform: translate(-50%, -50%)
+      top: 6vw
+      left: 70%
+      width: 10vw
+      opacity: 0.8
+      font-size: 1vw
+
+    a
+      transform: translate(-50%, -50%)
+      left: 50%
+      #organizerpic
+        transform: translate(-50%, -50%)
+        height: 6vw
+        width: 6vw
+        top: 10.5vw
+        left: 50%
+        border-radius: 3vw
+        background-color: #C4C4C4
+        
+      p
+        transform: translate(-50%, -50%)
+        top: 14.7vw
+        left: 50%
+        font-size: 1.5vw
+        color: black
+        width: 5vw
+    
+    a#login-redirect
+      width: 6vw
+      height: 3vw
+      transform: translate(-50%, -50%)
+      top: 95%
+      display: flex
+      flex-direction: row
+    #likebutton
+      left: 1vw
+      bottom: 1vw
+      height: 3vw
+      width: 3vw
+      background-image: url('../file/like-n.png')
+      background-repeat: no-repeat
+      background-size: contain
+      form
+        button
+          background: Transparent
+          border: none
+          width: 3vw
+          height: 3vw
+        button:hover
+          cursor: pointer
+    
+      #like-y
+        display: none
+        width: 100%
+
+      #like-n
+        display: block
+        width: 100%
+    
+    #applybutton
+      right: 0.5vw
+      bottom: 1vw
+      height: 3vw
+      width: 3vw
+
+      #apply-y
+        display: block
+        width: 100%
+        
+      #apply-n
+        display: none
+        width: 100%
+    #applybutton:hover
+      cursor: pointer
+
+  #sent
+    position: absolute
+    //transform: translate(-50%, -50%)
+    display: block
+    top: -6px
+    left: -6px
+    right: -6px
+    bottom: -6px
+    width: auto
+    height: auto
+    border-radius: 3vw
+    opacity: 0
+    z-index: -1
+    backdrop-filter: blur(5px) contrast(40%) saturate(40%) brightness(70%)
+    -webkit-backdrop-filter: blur(5px) contrast(40%) saturate(40%) brightness(70%)
+
+    #mailicon
+      position: absolute
+      transform: translate(-50%, -100%)
+      height: 40%
+      width: auto
+      top: 65%
+      left: 50%
+    
+    p
+      position: absolute
+      transform: translate(-50%, 0)
+      font-size: 4vw
+      text-align: center
+      bottom: 20%
+      left: 50%
+      width: 100%
+      opacity: 1
+      color: white
+#filter1
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
+  -webkit-backdrop-filter: blur(5px) contrast(70%) saturate(70%) brightness(70%)
+  z-index: 6
     
 //phone responsive
 @media only screen and (max-width: 450px)
