--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -117,14 +117,15 @@ body
   position: absolute
   transform: translate(-50%, -50%)
   z-index: 1
-  top: 50%
-  left: 30%
+  top: 54%
+  left: 32%
   text-align: center
   width: 20vw
   h1
     font-size: 3vw
   p
     font-size: 1.3vw
+    margin-top: 1vw
 
 #panel1
   display: flex
