--- a/templates/homepage.pug
+++ b/templates/homepage.pug
@@ -36,6 +36,7 @@ html
           p 排序
           select#sort
             option(value='hot') 最新
+            option(value='hot') 最近期
             option(value='hot') 最多人喜歡
             option(value='hot') 最多人參與
           hr#line2.line
