--- a/templates/login.pug
+++ b/templates/login.pug
@@ -72,8 +72,8 @@ html
         #wb1.bbox
         span#white-bubble1
       #introduction <!-- join us.. -->
-        h1 Join us now.
-        p.description introduction introduction introduction
+        h1 加入Connect
+        p.description 幫想做的事找個夥伴！
       
 
     
